--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
             margin: 0;
             background-color: #f0f0f0;
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
         canvas {
             border: 2px solid #333;
             background-color: #fff;
+            max-width: 90vmin;
+            max-height: 90vmin;
         }
         .score {
-            font-size: 24px;
+            font-size: min(24px, 5vmin);
             margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="score">Score: <span id="score">0</span></div>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <script type="module" src="src/game.ts"></script>
 </body>
 </html>
